# outMonitor

./: CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: build-docs.yml  build-test-install.yml
include/: boutmonitor.hpp  converter.hpp  outmonitor.hpp
qml/: window.qml
src/: boutmonitor.cpp  outmonitor.cpp
